Can now alter the length of the password

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
    {
   "manifest_version": 2,
 
-  "name": "LittleP Password Generator",
+  "name": "LittleP Password Generator - DEV",
   "description": "Create a password!",
   "version": "1.0.5",
 
